fixed align and links w/ download gcp

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,14 @@
-html,
-body {
+* {
+
     font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
         'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
         'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+html,
+body {
     background: linear-gradient(
         130.36deg,
         #000000 0%,
@@ -14,6 +18,8 @@ body {
     );
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
 }
 
 html ::-webkit-scrollbar {
@@ -37,7 +43,4 @@ a {
 @font-face {
     font-family: 'CourierPrime';
     src: url('/public/fonts/CourierPrime-Regular.ttf');
-}
-
-@media screen and (max-width: 2500px) {
 }
